[package]
name = "ese"
version = "0.1.0"
authors = ["Vinícius Rodrigues Miguel <vrmiguel99@gmail.com>"]
repository = "https://github.com/vrmiguel/ese"
license = "MIT"
edition = "2021"

[dev-dependencies]
tempfile = "3.2.0"
assert_cmd = "2.0.2"
predicates = "2.0.3"

[dependencies]
argh = "0.1.6"
fs-err = "2.6.0"
anyhow = "1.0.45"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3